--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
+    "preact": "^10.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
