--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "8.4.30",
     "preact": "^10.17.1",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
