--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.10",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
+    "next-pwa": "^5.6.0",
     "nookies": "^2.5.2",
     "postcss": "8.4.30",
     "preact": "^10.17.1",
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "local-ssl-proxy": "1.3.0",
+    "next-compose-plugins": "^2.2.1",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
